@@ -1,5 +1,8 @@
 1.3.0 (beta)
 
+ - Added "Include Empties" flag to mailer. On by default. Similar to
+   thanks page. (Steve McMahon)
+
  - Wrap rendered rich label fields in div with selectors similar to
    other Archetypes widgets. (Steve McMahon)
 
